<resources>
    <string name="app_name">Fitocrazy</string>
    <string name="today">Today</string>

    <string name="number_of_exercises_in_workout">%1$d\nexercises</string>
    <string name="total_points_in_workout">%1$d pts</string>
    <string name="total_weight_in_workout">"%.0f kg"</string>

    <string name="label_ExpandNewExerciseGroup">New Exercise</string>
    <string name="btn_addExercise">Done</string>
    <string name="label_addExercise">Add exercise:</string>
    <string name="btn_add">+</string>
    <string name="btn_minus">-</string>
    <string name="autocomplete_addExercise">select an existing exercise</string>
    <string name="label_enterNewExerciseComponentText">Create a new %1$s:</string>
    <string name="kilograms">KG</string>
    <string name="btn_removeLastSet">-</string>
    <string name="label_kilogramTimesSets">kg X</string>
    <string name="repetitions">reps</string>
    <string name="label_add_some_exercises">Add some exercises…</string>
    <string name="total_points">Total Points:</string>
    <string name="total_weight">Total Weight:</string>
    <string name="total_reps">Total Reps:</string>
    <string name="total_sets">Total Sets:</string>
    <string name="total_time">Total Time:</string>
    <string name="channel_name">Add new Sets</string>
    <string name="channel_description">Add a new set to the current exercise</string>

    <string name="add_exercise_days_ago">%1$s (%2$d days ago)</string>
    <string name="btn_rename">Rename</string>

    <string name="navigation_workout_list">Workouts</string>
    <string name="navigation_exercise_and_components">Exercises</string>

    <string name="exercise_max_weight">PR: %1$.2f kg</string>
    <string name="exercise_max_reps">Most reps in a single set: %1$d</string>
    <string name="exercise_max_moved">Max moved: %1$.0f kg</string>
    <string name="exercise_last_seen">Last seen: %1$s (%2$d days ago)</string>
    <string name="exercise_last_seen_today">Last seen: %1$s (today)</string>
    <string name="exercise_last_seen_never">[never done]</string>
    <string name="btn_edit">Edit</string>

    <string name="title_profile">Profile</string>
    <string name="description_end_timing_of_workout">End timing of workout</string>
    <string name="description_add_new_exercise">Add new exercise</string>
    <string name="machine">Machine</string>
    <string name="free_weight">Free Weight</string>
    <string name="compound">Compound</string>
    <string name="exercises">Exercises</string>
    <string name="equipment">Equipment</string>
    <string name="location">Location</string>
    <string name="movement">Movement</string>
    <string name="new_workout">New Workout</string>
    <string name="delete_workout">X</string>
    <string name="achivement_most_weight_moved">achivement: most weight moved</string>
    <string name="achivement_most_reps">achivement: most reps</string>
    <string name="achivement_max_weight">achivement: max weight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>