<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_leftExerciseCard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/label_exerciseNameOnCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="16dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollview_listOfSetsOnExerciseCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <HorizontalScrollView
            android:id="@+id/scrollview_listOfSetsOnExerciseCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/label_ExpandNewExerciseGroup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_exerciseNameOnCard"
            app:layout_constraintVertical_weight="5">

            <LinearLayout
                android:id="@+id/layout_listOfSetsOnExerciseCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_right_exerciseCard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_addSetToThisExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:minWidth="0dp"
            android:text="@string/btn_addNewEquipment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_removeLastSetFromThisExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:minWidth="0dp"
            android:text="@string/btn_removeLastSet"
            app:layout_constraintEnd_toStartOf="@+id/btn_addSetToThisExercise"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_addSetToThisExercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_addSetToThisExercise">

            <EditText
                android:id="@+id/numberEntry_addKilogramsToThisExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/kilograms"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_kilogramsAndRepsWhenAddingToExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_kilogramTimesSets"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/numberEntry_addRepsToThisExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/repetitions"
                android:importantForAutofill="no"
                android:inputType="number" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>