<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#FFFFFF"
    android:elevation="4dp"
    android:outlineSpotShadowColor="@color/orange_main"
    android:padding="8dp">

    <TextView
        android:id="@+id/label_workoutDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:text="TODAY"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintEnd_toStartOf="@+id/label_workoutNumberExercises"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_workoutNumberExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|end"
        android:text="@string/number_of_exercises_in_workout"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_workoutDate"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_workoutTopTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/label_workoutPoints"
        app:layout_constraintEnd_toStartOf="@id/layout_workoutOtherStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_workoutDate">

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/label_workoutPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom|left"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layout_workoutOtherStats"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_workoutOtherStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_workoutPoints"
        app:layout_constraintTop_toBottomOf="@id/label_workoutDate">

        <TextView
            android:id="@+id/label_workoutTotalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_weight" />

        <TextView
            android:id="@+id/label_workoutTotalReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_reps" />

        <TextView
            android:id="@+id/label_workoutTotalSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="total_sets" />

        <TextView
            android:id="@+id/label_workoutTotalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>