<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_addNewExercise_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/label_ExpandNewExerciseGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ExpandNewExerciseGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_addExercise" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_addExerciseToWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/label_ExpandNewExerciseGroup"
        tools:context=".workout.addExercise.AddNewExerciseToWorkoutFragment">

        <TextView
            android:id="@+id/label_addExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_addExercise"
            app:layout_constraintBottom_toTopOf="@id/spinner_equipment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@id/spinner_position"
            app:layout_constraintEnd_toEndOf="@+id/spinner_position"
            app:layout_constraintEnd_toStartOf="@id/btn_addNewEquipment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_addExercise" />

        <Button
            android:id="@+id/btn_addNewEquipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_addNewEquipment"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_equipment"
            app:layout_constraintEnd_toEndOf="@+id/btn_addNewLocation"
            app:layout_constraintTop_toTopOf="@+id/spinner_equipment" />

        <Spinner
            android:id="@+id/spinner_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@id/spinner_movement"
            app:layout_constraintEnd_toEndOf="@+id/spinner_movement"
            app:layout_constraintEnd_toStartOf="@id/btn_addNewLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_equipment" />

        <Button
            android:id="@+id/btn_addNewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_addNewEquipment"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_position"
            app:layout_constraintEnd_toEndOf="@+id/btn_addNewMovement"
            app:layout_constraintTop_toTopOf="@+id/spinner_position" />

        <Spinner
            android:id="@+id/spinner_movement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="64dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@id/btn_addNewMovement"
            app:layout_constraintEnd_toStartOf="@id/btn_addNewMovement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_position" />

        <Button
            android:id="@+id/btn_addNewMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/btn_addNewEquipment"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_movement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinner_movement"
            app:layout_constraintTop_toBottomOf="@+id/spinner_position" />

        <RadioGroup
            android:id="@+id/radioGroup_exerciseType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/chipGroup_exerciseTags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_movement">

            <RadioButton
                android:id="@+id/radio_isMachineExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Machine" />

            <RadioButton
                android:id="@+id/radio_isFreeWeightExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Free Weight" />

            <RadioButton
                android:id="@+id/radio_isCompoundExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Compound" />
        </RadioGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup_exerciseTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup_exerciseType">

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <AutoCompleteTextView
        android:id="@+id/autocomplete_addExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/autocomplete_addExercise" />

    <Button
        android:id="@+id/btn_addExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_addExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_addExerciseToWorkout" />
</androidx.constraintlayout.widget.ConstraintLayout>