<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_currentWorkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.WorkoutActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_endWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:alpha="0"
        android:clickable="true"
        android:contentDescription="End timing of workout"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_addNewExerciseToCurrentWorkout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addNewExerciseToCurrentWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="Add new exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:id="@+id/layout_currentWorkoutMainArea"
        android:layout_width="410dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_currentWorkoutStats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:id="@+id/layout_workoutTimer"
                android:layout_width="0dp"
                android:layout_height="144dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layout_workoutTotals"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".workout.WorkoutTimerFragment">

                <Chronometer
                    android:id="@+id/timer_timeAfterLastSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="3:21" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/totals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <Chronometer
                        android:id="@+id/timer_totalTime"
                        android:layout_width="0dp"
                        android:layout_height="124dp"
                        android:gravity="center"
                        android:text="12:34"
                        app:layout_constraintBottom_toBottomOf="@+id/averageTime"
                        app:layout_constraintEnd_toStartOf="@+id/averageTime"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                    <TextView
                        android:id="@+id/averageTime"
                        android:layout_width="0dp"
                        android:layout_height="124dp"
                        android:gravity="center"
                        android:text="1:23"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_workoutTotals"
                android:layout_width="0dp"
                android:layout_height="144dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/layout_workoutTimer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".workout.WorkoutStatsFragment">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalPoints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/total_points" />

                    <TextView
                        android:id="@+id/totalPointsValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/total_weight" />

                    <TextView
                        android:id="@+id/totalWeightValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalReps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/total_reps" />

                    <TextView
                        android:id="@+id/totalRepsValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/label_startWorkoutAddExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_some_exercises"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_exercisesInCurrentWorkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#F2F2F2"
            android:paddingHorizontal="2dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>